Fix table styles in dark mode

--- a/web/src/layout/detail/report/Row.module.css
+++ b/web/src/layout/detail/report/Row.module.css
@@ -32,6 +32,11 @@
   background-color: var(--body-bg);
 }
 
+.table > :not(caption) > * > * {
+  background-color: transparent;
+  color: inherit;
+}
+
 .reportContent {
   background-color: var(--bg-color);
 }
